create github pages

--- a/page1.html
+++ b/page1.html
@@ -16,15 +16,13 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
   <link href="assets/fonts/style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
-  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
 </head>
 <body>
-<section class="testimonials5 cid-qsgturfKtQ" id="testimonials5-5" data-rv-view="577">
+<section class="testimonials5 cid-qsgturfKtQ" id="testimonials5-5" data-rv-view="65">
 
     
 
@@ -89,7 +87,7 @@
     </div>   
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section once="" class="cid-qsgsGxcbEM" id="footer7-4" data-rv-view="585">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section once="" class="cid-qsgsGxcbEM" id="footer7-4" data-rv-view="73">
 
     
 
