create github pages

--- a/page1.html
+++ b/page1.html
@@ -22,7 +22,7 @@
   
 </head>
 <body>
-<section class="testimonials5 cid-qsgturfKtQ" id="testimonials5-5" data-rv-view="65">
+<section class="testimonials5 cid-qsgturfKtQ" id="testimonials5-5" data-rv-view="36">
 
     
 
@@ -87,7 +87,7 @@
     </div>   
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section once="" class="cid-qsgsGxcbEM" id="footer7-4" data-rv-view="73">
+<section class="engine"><a href="https://mobirise.co/e">web creation software</a></section><section once="" class="cid-qsgsGxcbEM" id="footer7-4" data-rv-view="44">
 
     
 
